cleanup AnnotationController
- handle null Annotation
- use Java record for the DTO class