@@ -18,7 +18,7 @@
  */
 
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
  * Portions Copyright (c) 2020, Chris Fraire <cfraire@me.com>.
  */
 package org.opengrok.web.api.v1.controller;
@@ -39,6 +39,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -48,6 +49,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class AnnotationControllerTest extends OGKJerseyTest {
@@ -69,7 +71,9 @@ class AnnotationControllerTest extends OGKJerseyTest {
     public void setUp() throws Exception {
         super.setUp();
         repository = new TestRepository();
-        repository.create(HistoryGuru.class.getResource("/repositories"));
+        final URL repositoryURL = HistoryGuru.class.getResource("/repositories");
+        assertNotNull(repositoryURL);
+        repository.create(repositoryURL);
 
         env.setSourceRoot(repository.getSourceRoot());
         env.setDataRoot(repository.getDataRoot());
@@ -120,18 +124,18 @@ class AnnotationControllerTest extends OGKJerseyTest {
                 .get(new GenericType<>() {
                 });
         assertEquals(getNumLines(new File(env.getSourceRootFile(), path)), annotations.size());
-        assertEquals("Trond Norbye", annotations.get(0).getAuthor());
+        assertEquals("Trond Norbye", annotations.getFirst().author());
         List<String> ids = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getRevision).
+                map(AnnotationController.AnnotationDTO::revision).
                 collect(Collectors.toList());
         assertEquals(Arrays.asList(HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8,
                 HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8, HASH_AA35C258, HASH_AA35C258, HASH_AA35C258), ids);
         List<String> versions = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getVersion).
+                map(AnnotationController.AnnotationDTO::version).
                 collect(Collectors.toList());
         assertEquals(Arrays.asList("1/2", "1/2", "1/2", "1/2", "1/2", "1/2", "1/2", "1/2", "2/2", "2/2", "2/2"),
                 versions);
-        assertTrue(annotations.get(0).getDescription().contains("sunray"));
+        assertTrue(annotations.getFirst().description().contains("sunray"));
     }
 
     @Test
@@ -144,12 +148,12 @@ class AnnotationControllerTest extends OGKJerseyTest {
                 .get(new GenericType<>() {
                 });
         assertEquals(8, annotations.size());
-        assertEquals("Trond Norbye", annotations.get(0).getAuthor());
+        assertEquals("Trond Norbye", annotations.getFirst().author());
         Set<String> ids = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getRevision).
+                map(AnnotationController.AnnotationDTO::revision).
                 collect(Collectors.toSet());
         List<String> versions = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getVersion).
+                map(AnnotationController.AnnotationDTO::version).
                 collect(Collectors.toList());
         assertEquals(Arrays.asList("1/1", "1/1", "1/1", "1/1", "1/1", "1/1", "1/1", "1/1"),
                 versions);
